# speed-test

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  SpeedTest.sln
SpeedTest/: SpeedTest.vcxproj  SpeedTest.vcxproj.filters
SpeedTest/doc/: CopyPastHelper.txt  TODO.txt
SpeedTest/include/: TestResultsAnalitics.h  TestSpeed.h  TesterSpeed.h  WriteLineConsole.h
SpeedTest/src/: TestResultsAnalitics.cpp  TestSpeed.cpp  TesterSpeed.cpp  main.cpp
doc/: Doxyfile  copy-past-helper.txt  to-do.txt
include/: repeat-macros.hpp  test-results-analitics.hpp  test-speed.hpp  tester-speed.hpp  write-line-console.hpp
src/: main.cpp
